<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@color/myDarkKhaki"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/it_is_textview"
        android:textSize="@dimen/textViewSize"
        android:fontFamily="@string/fontFamily"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:textSize="@dimen/editTextSize"
        android:textColor="@color/white"
        android:hint="@string/it_is_hint"
        android:textColorHint="@color/teal_700"
        android:layout_marginTop="@dimen/marginTop" />
    
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textAllCaps="false"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/marginTop"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="switch"
        android:textColor="@color/white"
        android:switchPadding="@dimen/switchPadding"
        android:switchMinWidth="@dimen/switchTrack"
        android:showText="true"
        android:textAllCaps="false"
        android:textOn="@string/enabled"
        android:textOff="@string/disabled"
        android:drawableLeft="@drawable/android_icon"
        android:layout_marginTop="@dimen/marginTop"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_message"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/marginTop"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:background="@color/margenta"
        android:layout_marginTop="@dimen/marginTop"/>

</LinearLayout>