<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_name"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:ems="20"
        android:hint="@string/enter_name_here"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        android:textSize="@dimen/editTextSize" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:text="@string/enter_phone"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:ems="20"
        android:hint="@string/enter_phone_here"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        android:textSize="@dimen/editTextSize" />

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:text="@string/enter_email_address"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:ems="20"
        android:hint="@string/enter_email_address_here"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        android:textSize="@dimen/editTextSize" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:text="@string/enter_password"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:ems="20"
        android:hint="@string/enter_password_here"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_700"
        android:textSize="@dimen/editTextSize" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop" />
    </ScrollView>

</LinearLayout>

